# video-study-digest-skill

./: .gitattributes  .gitignore  README.md  pyproject.toml
skills/video-study-digest/: SKILL.md
skills/video-study-digest/agents/: openai.yaml
skills/video-study-digest/references/: source-workflow.md  study-note-contract.md
skills/video-study-digest/scripts/: cache_paths.py  doctor.py  extract_video_context.py  prepare_transcript.py  transcribe_audio.py  video_digest_pipeline.py
tests/: test_doctor.py  test_extract_video_context.py  test_prepare_transcript.py  test_transcribe_audio.py  test_video_digest_pipeline.py
